--- a/humans_demo/Humans.ipynb
+++ b/humans_demo/Humans.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#loading needed modules from biopython\n",
     "from Bio import Entrez, Seq, SeqIO\n",
+    "import numpy as np\n",
     "\n",
     "#load nucleotide sequences from NCBI \n",
     "def get_seq(db, key, rettype=\"gb\"):\n",
@@ -23,34 +24,242 @@
     "#[welche daten werden geladen?]\n",
     "#hvr-2\n",
     "nea_2a = get_seq(\"nucleotide\", \"AF142095\")\n",
-    "nea_2b = get_seq(\"nucleotide\", \"AF282972\")\n",
-    "\n",
-    "handle.close()"
+    "nea_2b = get_seq(\"nucleotide\", \"AF282972\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'humans_demo/d_loop.fasta'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-82c6864fce09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"humans_demo/d_loop.fasta\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0min_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mrecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSeqIO\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0min_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"fasta\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m# and print only the first record\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'humans_demo/d_loop.fasta'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Andalusia(AF382011).txt\n",
+      "Aust(AF346963).txt\n",
+      "Aust(AF346964).txt\n",
+      "Aust(AF346965).txt\n",
+      "Aust(AY289051).txt\n",
+      "Aust(AY289052).txt\n",
+      "Aust(AY289053).txt\n",
+      "Aust(AY289054).txt\n",
+      "Aust(AY289055).txt\n",
+      "Aust(AY289056).txt\n",
+      "Aust(AY289057).txt\n",
+      "Aust(AY289058).txt\n",
+      "Aust(AY289059).txt\n",
+      "Aust(AY289060).txt\n",
+      "Aust(AY289061).txt\n",
+      "Aust(AY289062).txt\n",
+      "Aust(AY289063).txt\n",
+      "Aust(AY289064).txt\n",
+      "Aust(AY289065).txt\n",
+      "Aust(AY289066).txt\n",
+      "Aust(AY289067).txt\n",
+      "Bamileke(AF346967).txt\n",
+      "Berber(AF381989).txt\n",
+      "Berber(AF381990).txt\n",
+      "Biaka(AF346968).txt\n",
+      "Biaka(AF346969).txt\n",
+      "Buriat(AF346970).txt\n",
+      "Buriat(AY519484).txt\n",
+      "Canary(AF381982).txt\n",
+      "Canary(AF382009).txt\n",
+      "Canary(AF382010).txt\n",
+      "Caucasian(AY195745).txt\n",
+      "Caucasian(AY195746).txt\n",
+      "Caucasian(AY195747).txt\n",
+      "Caucasian(AY195750).txt\n",
+      "Caucasian(AY195751).txt\n",
+      "Caucasian(AY195752).txt\n",
+      "Caucasian(AY195754).txt\n",
+      "Caucasian(AY195758).txt\n",
+      "Caucasian(AY195764).txt\n",
+      "Caucasian(AY195765).txt\n",
+      "Caucasian(AY195767).txt\n",
+      "Caucasian(AY195768).txt\n",
+      "Caucasian(AY195769).txt\n",
+      "Caucasian(AY195774).txt\n",
+      "Caucasian(AY195775).txt\n",
+      "Caucasian(AY195778).txt\n",
+      "Caucasian(AY195781).txt\n",
+      "Chinese(AF346972).txt\n",
+      "Chinese(AF346973).txt\n",
+      "Chukchi(AF346971).txt\n",
+      "Cook(AY289068).txt\n",
+      "Cook(AY289069).txt\n",
+      "Dutch(AF346975).txt\n",
+      "Effik(AF346976).txt\n",
+      "Effik(AF346977).txt\n",
+      "English(AF346978).txt\n",
+      "Evenki(AF346979).txt\n",
+      "Evenki(AY195753).txt\n",
+      "Evenki(AY519485).txt\n",
+      "Ewondo(AF346980).txt\n",
+      "Filipino(AF382012).txt\n",
+      "Filipino(AY289070).txt\n",
+      "Finland(AY195773).txt\n",
+      "Finland(AY195779).txt\n",
+      "French(AF346981).txt\n",
+      "Georgian(AF346982).txt\n",
+      "Georgian(AY195755).txt\n",
+      "Georgian(AY195756).txt\n",
+      "German(AF346983).txt\n",
+      "Guarani(AF346984).txt\n",
+      "Hausa(AF346985).txt\n",
+      "Ibo(AF346986).txt\n",
+      "Ibo(AF346987).txt\n",
+      "India(AF346966).txt\n",
+      "India(AF382013).txt\n",
+      "Iraqi-Israeli(AY195757).txt\n",
+      "Italian(AF346988).txt\n",
+      "Japan(AF346989).txt\n",
+      "Japan(AF346990).txt\n",
+      "Jordan(AF381995).txt\n",
+      "Jordan(AF381996).txt\n",
+      "Jordan(AF381997).txt\n",
+      "Jordan(AF381998).txt\n",
+      "Jordan(AF381999).txt\n",
+      "Jordan(AF382000).txt\n",
+      "Kannada(AY289071).txt\n",
+      "Ket(AY519486).txt\n",
+      "Khirgiz(AF346991).txt\n",
+      "Khwe(AY195777).txt\n",
+      "Kikuyu(AF346992).txt\n",
+      "Koraga(AY289072).txt\n",
+      "Koraga(AY289073).txt\n",
+      "Korea(AF346993).txt\n",
+      "Korea(AY195760).txt\n",
+      "Koryak(AY195761).txt\n",
+      "Koryak(AY195762).txt\n",
+      "Koryak(AY195763).txt\n",
+      "Koryak(AY519487).txt\n",
+      "Leon(AF382004).txt\n",
+      "Leon(AF382005).txt\n",
+      "Leon(AF382006).txt\n",
+      "Leon(AF382007).txt\n",
+      "Lisongo(AF346994).txt\n",
+      "Malay(AY195791).txt\n",
+      "Mandenka(AF346995).txt\n",
+      "Mansi(AY519488).txt\n",
+      "Mansi(AY570524).txt\n",
+      "Maragato(AF382001).txt\n",
+      "Maragato(AF382002).txt\n",
+      "Maragato(AF382003).txt\n",
+      "Mauritania(AF381981).txt\n",
+      "Mauritania(AF381991).txt\n",
+      "Mauritania(AF381992).txt\n",
+      "Mauritania(AF381993).txt\n",
+      "Mauritania(AF381994).txt\n",
+      "Mbenzele(AF346996).txt\n",
+      "Mbenzele(AF346997).txt\n",
+      "Mbuti(AF346998).txt\n",
+      "Mbuti(AF346999).txt\n",
+      "Mixteca-Baja(AY195786).txt\n",
+      "Mkamba(AF347000).txt\n",
+      "Morocco(AF381983).txt\n",
+      "Morocco(AF381984).txt\n",
+      "Morocco(AF381985).txt\n",
+      "Morocco(AF381986).txt\n",
+      "Morocco(AF381987).txt\n",
+      "Morocco(AF381988).txt\n",
+      "Morocco(AF382008).txt\n",
+      "Mullukurun(AY289074).txt\n",
+      "Nanaj-Negidal(AY195790).txt\n",
+      "Nanaj-Negidal(AY195792).txt\n",
+      "Nasioi(AY289075).txt\n",
+      "NativeAmerican(AY195748).txt\n",
+      "NativeAmerican(AY195749).txt\n",
+      "NativeAmerican(AY195759).txt\n",
+      "Navajo(AY195787).txt\n",
+      "Negidal'tsy(AY519489).txt\n",
+      "Nganasan(AY519490).txt\n",
+      "Nganasan(AY519491).txt\n",
+      "Nganasan(AY615359).txt\n",
+      "Piman(AF347001).txt\n",
+      "PNGCoast(AF347002).txt\n",
+      "PNGCoast(AF347003).txt\n",
+      "PNGCoast(AY289076).txt\n",
+      "PNGCoast(AY289077).txt\n",
+      "PNGCoast(AY289078).txt\n",
+      "PNGCoast(AY289079).txt\n",
+      "PNGCoast(AY289080).txt\n",
+      "PNGCoast(AY289081).txt\n",
+      "PNGCoast(AY289082).txt\n",
+      "PNGCoast(AY289083).txt\n",
+      "PNGHigh(AF347004).txt\n",
+      "PNGHigh(AF347005).txt\n",
+      "PNGHigh(AY289084).txt\n",
+      "PNGHigh(AY289085).txt\n",
+      "PNGHigh(AY289086).txt\n",
+      "PNGHigh(AY289087).txt\n",
+      "PNGHigh(AY289088).txt\n",
+      "PNGHigh(AY289089).txt\n",
+      "PNGHigh(AY289090).txt\n",
+      "PNGHigh(AY289091).txt\n",
+      "PNGHigh(AY289092).txt\n",
+      "Saami(AF347006).txt\n",
+      "Samoa(AF347007).txt\n",
+      "Samoa(AY289093).txt\n",
+      "Samoa(AY289094).txt\n",
+      "San(AF347008).txt\n",
+      "San(AF347009).txt\n",
+      "San(AY195783).txt\n",
+      "San(AY195788).txt\n",
+      "San(AY195789).txt\n",
+      "SibInuit(AF347010).txt\n",
+      "SouthAfrican(AY195766).txt\n",
+      "SouthAfrican(AY195776).txt\n",
+      "SouthAfrican(AY195780).txt\n",
+      "SouthAfrican(AY195782).txt\n",
+      "SouthAfrican(AY195784).txt\n",
+      "SouthAfrican(AY195785).txt\n",
+      "Taiwan(AY195771).txt\n",
+      "Taiwan(AY289095).txt\n",
+      "Taiwan(AY289096).txt\n",
+      "Taiwan(AY289097).txt\n",
+      "Taiwan(AY289098).txt\n",
+      "Tatar(AF346974).txt\n",
+      "Thai(AY289099).txt\n",
+      "Thai(AY289100).txt\n",
+      "Thai(AY289101).txt\n",
+      "Tofalar(AY519492).txt\n",
+      "Tofalar(AY519493).txt\n",
+      "Tofalar(AY615360).txt\n",
+      "Tofalar-Negidal(AY195770).txt\n",
+      "Tonga(AY289102).txt\n",
+      "Tubalar(AY519494).txt\n",
+      "Tuvan(AY519495).txt\n",
+      "Tuvan(AY570525).txt\n",
+      "Tuvli(AY570526).txt\n",
+      "Udegei(AY195772).txt\n",
+      "Ul'chi(AY519496).txt\n",
+      "Ul'chi(AY519497).txt\n",
+      "Ul'chi(AY615361).txt\n",
+      "Uzbek(AF347011).txt\n",
+      "Warao(AF347012).txt\n",
+      "Warao(AF347013).txt\n",
+      "Yoruba(AF347014).txt\n",
+      "Yoruba(AF347015).txt\n",
+      "206\n"
      ]
     }
    ],
    "source": [
-    "with open(\"humans_demo/d_loop.fasta\", \"r\") as in_file:\n",
-    "   \n",
-    "    recs = list(SeqIO.parse(in_file, \"fasta\"))\n",
-    "    # and print only the first record\n",
-    "    print(recs[0].id, len(recs[0].seq), recs[0].seq[:10])\n"
+    "n = 206 #known length\n",
+    "with open(\"d_loop.fasta\", \"r\") as handle:\n",
+    "    for record in SeqIO.parse(handle, \"fasta\"):\n",
+    "        print(record.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nea_1 = nea_1a.seq + nea_1b.seq"
    ]
   },
   {
@@ -58,7 +267,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "score = np.zeros[]"
+   ]
   }
  ],
  "metadata": {
@@ -77,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
