add link to nuc44_sub_matrix

--- a/humans_demo/Humans.ipynb
+++ b/humans_demo/Humans.ipynb
@@ -43,13 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 206 #known length\n",
     "\n",
-    "nea_1 = nea_1a.seq + nea_1b.seq"
+    "nea_1 = nea_1a.seq + nea_1b.seq\n",
+    "nea_2 = nea_2a.seq + nea_2b.seq"
    ]
   },
   {
@@ -61,246 +62,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "664.0\n",
-      "665.0\n",
-      "665.0\n",
-      "666.0\n",
-      "664.0\n",
-      "668.0\n",
-      "663.0\n",
-      "663.0\n",
-      "662.0\n",
-      "662.0\n",
-      "662.0\n",
-      "662.0\n",
-      "662.0\n",
-      "662.0\n",
-      "664.0\n",
-      "665.0\n",
-      "666.0\n",
-      "665.0\n",
-      "667.0\n",
-      "669.0\n",
-      "670.0\n",
-      "665.0\n",
-      "662.0\n",
-      "666.0\n",
-      "664.0\n",
-      "665.0\n",
-      "661.0\n",
-      "668.0\n",
-      "666.0\n",
-      "666.0\n",
-      "664.0\n",
-      "663.0\n",
-      "667.0\n",
-      "664.0\n",
-      "662.0\n",
-      "667.0\n",
-      "662.0\n",
-      "663.0\n",
-      "661.0\n",
-      "663.0\n",
-      "664.0\n",
-      "663.0\n",
-      "663.0\n",
-      "664.0\n",
-      "667.0\n",
-      "665.0\n",
-      "665.0\n",
-      "662.0\n",
-      "662.0\n",
-      "661.0\n",
-      "665.0\n",
-      "667.0\n",
-      "670.0\n",
-      "665.0\n",
-      "666.0\n",
-      "667.0\n",
-      "666.0\n",
-      "666.0\n",
-      "662.0\n",
-      "665.0\n",
-      "663.0\n",
-      "665.0\n",
-      "665.0\n",
-      "667.0\n",
-      "662.0\n",
-      "662.0\n",
-      "666.0\n",
-      "664.0\n",
-      "666.0\n",
-      "666.0\n",
-      "661.0\n",
-      "663.0\n",
-      "666.0\n",
-      "665.0\n",
-      "665.0\n",
-      "664.0\n",
-      "662.0\n",
-      "665.0\n",
-      "664.0\n",
-      "665.0\n",
-      "666.0\n",
-      "663.0\n",
-      "666.0\n",
-      "666.0\n",
-      "665.0\n",
-      "667.0\n",
-      "664.0\n",
-      "664.0\n",
-      "667.0\n",
-      "667.0\n",
-      "665.0\n",
-      "663.0\n",
-      "665.0\n",
-      "667.0\n",
-      "660.0\n",
-      "665.0\n",
-      "665.0\n",
-      "669.0\n",
-      "664.0\n",
-      "666.0\n",
-      "667.0\n",
-      "664.0\n",
-      "669.0\n",
-      "666.0\n",
-      "664.0\n",
-      "664.0\n",
-      "665.0\n",
-      "665.0\n",
-      "665.0\n",
-      "662.0\n",
-      "666.0\n",
-      "664.0\n",
-      "664.0\n",
-      "667.0\n",
-      "666.0\n",
-      "666.0\n",
-      "667.0\n",
-      "664.0\n",
-      "664.0\n",
-      "664.0\n",
-      "666.0\n",
-      "666.0\n",
-      "665.0\n",
-      "663.0\n",
-      "664.0\n",
-      "666.0\n",
-      "666.0\n",
-      "663.0\n",
-      "663.0\n",
-      "665.0\n",
-      "661.0\n",
-      "667.0\n",
-      "665.0\n",
-      "662.0\n",
-      "668.0\n",
-      "667.0\n",
-      "663.0\n",
-      "667.0\n",
-      "664.0\n",
-      "664.0\n",
-      "668.0\n",
-      "666.0\n",
-      "669.0\n",
-      "661.0\n",
-      "667.0\n",
-      "668.0\n",
-      "661.0\n",
-      "661.0\n",
-      "668.0\n",
-      "665.0\n",
-      "661.0\n",
-      "668.0\n",
-      "667.0\n",
-      "669.0\n",
-      "666.0\n",
-      "664.0\n",
-      "668.0\n",
-      "670.0\n",
-      "662.0\n",
-      "665.0\n",
-      "665.0\n",
-      "666.0\n",
-      "667.0\n",
-      "663.0\n",
-      "670.0\n",
-      "668.0\n",
-      "668.0\n",
-      "665.0\n",
-      "665.0\n",
-      "668.0\n",
-      "665.0\n",
-      "665.0\n",
-      "661.0\n",
-      "665.0\n",
-      "666.0\n",
-      "663.0\n",
-      "663.0\n",
-      "664.0\n",
-      "664.0\n",
-      "664.0\n",
-      "666.0\n",
-      "668.0\n",
-      "666.0\n",
-      "665.0\n",
-      "666.0\n",
-      "666.0\n",
-      "667.0\n",
-      "670.0\n",
-      "667.0\n",
-      "665.0\n",
-      "662.0\n",
-      "668.0\n",
-      "670.0\n",
-      "667.0\n",
-      "667.0\n",
-      "665.0\n",
-      "664.0\n",
-      "661.0\n",
-      "667.0\n",
-      "664.0\n",
-      "661.0\n",
-      "668.0\n",
-      "668.0\n",
-      "667.0\n",
-      "665.0\n",
-      "664.0\n"
+     "ename": "NameError",
+     "evalue": "name 'MatrixInfo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-f4e9a5bc8aac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0maligner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAlign\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPairwiseAligner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0maligner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'local'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0maligner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubstitution_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMatrixInfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnuc44\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"d_loop.fasta\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0msequences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'MatrixInfo' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nfrom Bio import AlignIO\\nhandle = ...\\nfor a in AlignIO.parse(handle, \"fasta-m10\"):\\n  assert len(a) == 2, \"Should be pairwise!\"\\n  print(\"Alignment length %i\" % a.get_alignment_length())\\n  for record in a:\\n    print(\"%s %s %s\" % (record.seq, record.name, record.id))\\n-----------------------------------------------------------------\\n>>> from Bio import Align\\n>>> aligner = Align.PairwiseAligner()\\n>>> alignments = aligner.align(\"ACCGT\", \"ACG\")\\n>>> for alignment in sorted(alignments):\\n...     print(\"Score = %.1f:\" % alignment.score)\\n...     print(alignment)'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "score = np.zeros(n)\n",
     "startat = np.zeros(n)\n",
     "\n",
-    "#for i=1:n\n",
-    "#      [sc,alignment,st]=swalign(human_dloop(i).Sequence,nea.Sequence,'Alphabet', 'NT');\n",
+    "\n",
     "aligner = Align.PairwiseAligner()\n",
     "aligner.mode = 'local'\n",
+    "aligner.substitution_matrix = MatrixInfo.nuc44\n",
     "with open(\"d_loop.fasta\", \"r\") as handle:\n",
-    "    alignments = []\n",
+    "    sequences = []\n",
     "    d_loop = SeqIO.parse(handle, \"fasta\")\n",
-    "    for seq in d_loop:\n",
+    "    \"\"\"for seq in d_loop:\n",
     "        a = aligner.align(nea_1, seq.seq)\n",
-    "        print(a.score)\n",
+    "        for i in a:\"\"\"\n",
+    "    for seq in d_loop:\n",
+    "        sequences.append(seq.seq)\n",
+    "    sequences.append(nea_1)\n",
+    "    sequences.append(nea_2)\n",
+    "            \n",
     "        \n",
     "    \n",
     "        \n",
@@ -326,38 +121,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Seq('GTTCTTTCATGGGGGAGCAGATTTGGGTACCACCCAAGTATTGACTCACCCATC...CCC', IUPACAmbiguousDNA())"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nea_1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[664.0, 665.0, 665.0, 666.0, 664.0, 668.0, 663.0, 663.0, 662.0, 662.0, 662.0, 662.0, 662.0, 662.0, 664.0, 665.0, 666.0, 665.0, 667.0, 669.0, 670.0, 665.0, 662.0, 666.0, 664.0, 665.0, 661.0, 668.0, 666.0, 666.0, 664.0, 663.0, 667.0, 664.0, 662.0, 667.0, 662.0, 663.0, 661.0, 663.0, 664.0, 663.0, 663.0, 664.0, 667.0, 665.0, 665.0, 662.0, 662.0, 661.0, 665.0, 667.0, 670.0, 665.0, 666.0, 667.0, 666.0, 666.0, 662.0, 665.0, 663.0, 665.0, 665.0, 667.0, 662.0, 662.0, 666.0, 664.0, 666.0, 666.0, 661.0, 663.0, 666.0, 665.0, 665.0, 664.0, 662.0, 665.0, 664.0, 665.0, 666.0, 663.0, 666.0, 666.0, 665.0, 667.0, 664.0, 664.0, 667.0, 667.0, 665.0, 663.0, 665.0, 667.0, 660.0, 665.0, 665.0, 669.0, 664.0, 666.0, 667.0, 664.0, 669.0, 666.0, 664.0, 664.0, 665.0, 665.0, 665.0, 662.0, 666.0, 664.0, 664.0, 667.0, 666.0, 666.0, 667.0, 664.0, 664.0, 664.0, 666.0, 666.0, 665.0, 663.0, 664.0, 666.0, 666.0, 663.0, 663.0, 665.0, 661.0, 667.0, 665.0, 662.0, 668.0, 667.0, 663.0, 667.0, 664.0, 664.0, 668.0, 666.0, 669.0, 661.0, 667.0, 668.0, 661.0, 661.0, 668.0, 665.0, 661.0, 668.0, 667.0, 669.0, 666.0, 664.0, 668.0, 670.0, 662.0, 665.0, 665.0, 666.0, 667.0, 663.0, 670.0, 668.0, 668.0, 665.0, 665.0, 668.0, 665.0, 665.0, 661.0, 665.0, 666.0, 663.0, 663.0, 664.0, 664.0, 664.0, 666.0, 668.0, 666.0, 665.0, 666.0, 666.0, 667.0, 670.0, 667.0, 665.0, 662.0, 668.0, 670.0, 667.0, 667.0, 665.0, 664.0, 661.0, 667.0, 664.0, 661.0, 668.0, 668.0, 667.0, 665.0, 664.0]\n"
+      "736\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(len(nea_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SingleLetterAlphabet() alignment with 206 rows and 1600 columns\n",
+      "GTAGCACACAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Andalusia(AF382011).txt\n",
+      "GTAGCACTCAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AF346963).txt\n",
+      "GTAGCACTACAGAATAATTCCCCTTGCACACCCGATAAATCCGA...AAT Aust(AF346964).txt\n",
+      "GTAGCACTACAGATAAATTCCCCTTGCACACCCGATAAATCCGA...AAT Aust(AF346965).txt\n",
+      "GTAGCACACAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289051).txt\n",
+      "GTAGCACTACAAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAT Aust(AY289052).txt\n",
+      "GTAGCACTACGAATAAATTCCCCTTGCACACCCGATAAATCCAA...GAA Aust(AY289053).txt\n",
+      "GTAGCACTAAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289054).txt\n",
+      "GTAGCACTAAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289055).txt\n",
+      "GTAGCACTAAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289056).txt\n",
+      "GTAGCACTAAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289057).txt\n",
+      "GTAGCACTAAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289058).txt\n",
+      "GTAGCACTACAGAAAAATTCCCCTTGCACACCCGATAAATCCGA...ATC Aust(AY289059).txt\n",
+      "GTAGCACTAAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289060).txt\n",
+      "GTAGCACACAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289061).txt\n",
+      "GTAGCACTCAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289062).txt\n",
+      "GTAGCACTCAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289063).txt\n",
+      "GTAGCACTCAGAATAAATTCCCCTTGCACACCCGATAAATCCGA...GAA Aust(AY289064).txt\n",
+      "...\n",
+      "GTAGCACTACGAATAAATTCCCCTTGCACACCCGATAAATCCGA...AAT Yoruba(AF347015).txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Bio.Alphabet import generic_dna\n",
+    "from Bio.Seq import Seq\n",
+    "from Bio.SeqRecord import SeqRecord\n",
+    "from Bio.Align import MultipleSeqAlignment\n",
+    "from Bio import AlignIO\n",
+    "\n",
+    "with open(\"d_loop.fasta\", \"r\") as handle:\n",
+    "    sequences = []\n",
+    "    d_loop = SeqIO.parse(handle, \"fasta\")\n",
+    "    \"\"\"for seq in d_loop:\n",
+    "        a = aligner.align(nea_1, seq.seq)\n",
+    "        for i in a:\"\"\"\n",
+    "    for seq in d_loop:\n",
+    "        sequences.append(SeqRecord(seq.seq))\n",
+    "    sequences.append(SeqRecord(nea_1))\n",
+    "    \n",
+    "al1 = AlignIO.read(open(\"d_loop.fasta\", \"r\"), \"fasta\")  \n",
+    "print(al1)\n"
+   ]
   },
   {
    "cell_type": "code",
