--- a/humans_demo/Humans.ipynb
+++ b/humans_demo/Humans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 206 #known length\n",
     "\n",
-    "nea_1 = nea_1a.seq + nea_1b.seq\n",
-    "nea_2 = nea_2a.seq + nea_2b.seq"
+    "nea_1 = nea_1a.seq + nea_2a.seq\n",
+    "nea_2 = nea_1b.seq + nea_2b.seq"
    ]
   },
   {
@@ -62,78 +62,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'MatrixInfo' is not defined",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-38-03a780d47623>, line 15)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-f4e9a5bc8aac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0maligner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAlign\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPairwiseAligner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0maligner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'local'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0maligner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubstitution_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMatrixInfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnuc44\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"d_loop.fasta\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0msequences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'MatrixInfo' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-03a780d47623>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    \"\"\"for sr1, sr2 in product(seq,nea_1):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
+    "from Bio.pairwise2 import format_alignment\n",
+    "from itertools import product\n",
     "score = np.zeros(n)\n",
     "startat = np.zeros(n)\n",
     "\n",
     "\n",
-    "aligner = Align.PairwiseAligner()\n",
-    "aligner.mode = 'local'\n",
-    "aligner.substitution_matrix = MatrixInfo.nuc44\n",
+    "\n",
+    "\"\"\"aligner.mode = 'local'\"\"\"\n",
     "with open(\"d_loop.fasta\", \"r\") as handle:\n",
     "    sequences = []\n",
     "    d_loop = SeqIO.parse(handle, \"fasta\")\n",
-    "    \"\"\"for seq in d_loop:\n",
-    "        a = aligner.align(nea_1, seq.seq)\n",
-    "        for i in a:\"\"\"\n",
     "    for seq in d_loop:\n",
+    "        aligner = pairwise2.align.localms(nea_1, seq, 5, -4, -8, -8)\n",
+    "        print(format_alignment(*aligner[0]))\n",
+    "        \"\"\"for sr1, sr2 in product(seq,nea_1):\n",
+    "            for a in pairwise2.align.localms(str(seq[sr1].seq), str(nea_1[sr2].seq), 2, -1, -.5, -.1):\n",
+    "                result.write(format_alignment(*a))\"\"\"\n",
+    "\n",
+    "        \"\"\"for i in a:\n",
+    "            print(i)\"\"\"\n",
+    "    \"\"\"for seq in d_loop:\n",
     "        sequences.append(seq.seq)\n",
     "    sequences.append(nea_1)\n",
-    "    sequences.append(nea_2)\n",
-    "            \n",
-    "        \n",
-    "    \n",
-    "        \n",
-    "        \n",
-    "            \n",
-    "            \n",
-    "\"\"\"\n",
-    "from Bio import AlignIO\n",
-    "handle = ...\n",
-    "for a in AlignIO.parse(handle, \"fasta-m10\"):\n",
-    "  assert len(a) == 2, \"Should be pairwise!\"\n",
-    "  print(\"Alignment length %i\" % a.get_alignment_length())\n",
-    "  for record in a:\n",
-    "    print(\"%s %s %s\" % (record.seq, record.name, record.id))\n",
-    "-----------------------------------------------------------------\n",
-    ">>> from Bio import Align\n",
-    ">>> aligner = Align.PairwiseAligner()\n",
-    ">>> alignments = aligner.align(\"ACCGT\", \"ACG\")\n",
-    ">>> for alignment in sorted(alignments):\n",
-    "...     print(\"Score = %.1f:\" % alignment.score)\n",
-    "...     print(alignment)\"\"\""
+    "    sequences.append(nea_2)\"\"\"\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "736\n"
+      "modern human\n",
+      "GGATAGACTCCCCCCAGTAGGTACCCCTGCTCT-TCCC-TA-A--ACTGACA-TTAC-ACGATACAT-GC-CATTTCCGTAAT-ACATGA-TACATGACAATTCCCACCCATCCAAACAACCATAGGATCACCCACTCCCCACCGAAACCTTA-ACGTAACTACACACTATCAACTCCCAACTAACG-ACATGAACGAACATTCGTACCCCTCCCCCAAAACTAC-ACC-TAACC-CAAAA-TACATGATGTCCACCAGTTCATAA-ATACCATGGCATGTTATAAGTACCACCG-ACCGT-CATT-ACATGCTTTATGTATCGCAACAACTACCCAC-TCAGTTATGAACCCACCATGGGTTTA-GACGAAGGGGTACTTTCTTGTCTCTTATCAAATTTA-AT-CTAGAATCGAA--ACCC-A---CG-ATTACCAC-CTCA-ATTTCTGAAAAAGAG-ACTAAACAG-GAACCTTTTTCCAAAAGTAGAGGCCAATGTTCTGACCACA-TAA-TCAAATA-TGATGTTCCTGTCCGGGTAAACTCATAAA-ACAAAA-GT-TAATCC-CT-CTATCAACCATATCCTAATCCTAACAACA\n",
+      "nea_1\n",
+      "GTATTGACT-CACCCATCAGCAACCGCT-ATGTATCTCGTACATTACTGTTAGTTACCATGA-ATATTGTACAGTACCATAATTACTTGACTACCTG-CAGTACATA-AAAACC-TA-ATCCACATCA-AACCC-C-CCCC-CC-CATGCTTACAAGCAAGCACA-GCAATCAACCTTCAACTGTCATACATCAACTACAACTCCAAAGACGCCCTTACACCCACTAGGATATCAACAAACCTACCCACCCTTGA-CAGTACATAGCACATAAAGTCAT-TTA-CCGTA-CATAGCACATTACAGTCAAATCCCTTCTCGCCCCCATGGATGACCCCCCTCAGATA-GGGGTC-CCTTGATTTTTCGTCTGGGGGGT--GTGCACG-C-GATAGCATTGCGAGACGCTGGAGCCGGAGCACCCTATGTCGCAGTATCTGTCTTTGATTCCTGCCCCATTCCATTATTTATCGCACCTACGTTCAATATTACAGGCGAGCATACTTACTAAAGTGTGTTAATTAATTA-ATGCTTGT-AGGACATAATAATAACGACTAAATGTCTGCACAGCTGCTTTCCA-CACAGAC--ATCATAACAAAA\n",
+      "288.0\n",
+      "177\n",
+      "780\n"
      ]
     }
    ],
    "source": [
-    "print(len(nea_1))"
+    "sequences = []\n",
+    "with open(\"d_loop.fasta\", \"r\") as handle:\n",
+    "    d_loop = list(SeqIO.parse(handle, \"fasta\"))\n",
+    "    for a in d_loop:\n",
+    "        sequences.append(a)\n",
+    "\"\"\"for b in sequences:\n",
+    "    alignment = pairwise2.align.localms(nea_1, b, 5, -4, -8, -8)\n",
+    "    print(format_alignment(*aligner[0]))\"\"\"\n",
+    "alignment = pairwise2.align.localms(sequences[0].seq, nea_1, 5, -4, -8, -8)\n",
+    "\"print(format_alignment(*alignment[0]))\"\n",
+    "print(\"modern human\")\n",
+    "print(alignment[0][0][177:780])\n",
+    "print(\"nea_1\")\n",
+    "print(alignment[0][1][177:780])\n",
+    "print(alignment[0][2])\n",
+    "print(alignment[0][3])\n",
+    "print(alignment[0][4])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "504\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(alignment))"
    ]
   },
   {
