--- a/humans_demo/Humans.ipynb
+++ b/humans_demo/Humans.ipynb
@@ -57,91 +57,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Local Alignments"
+    "# Trim sequences with local alignment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-38-03a780d47623>, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-03a780d47623>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    \"\"\"for sr1, sr2 in product(seq,nea_1):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
-   "source": [
-    "from Bio.pairwise2 import format_alignment\n",
-    "from itertools import product\n",
-    "score = np.zeros(n)\n",
-    "startat = np.zeros(n)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\"\"\"aligner.mode = 'local'\"\"\"\n",
-    "with open(\"d_loop.fasta\", \"r\") as handle:\n",
-    "    sequences = []\n",
-    "    d_loop = SeqIO.parse(handle, \"fasta\")\n",
-    "    for seq in d_loop:\n",
-    "        aligner = pairwise2.align.localms(nea_1, seq, 5, -4, -8, -8)\n",
-    "        print(format_alignment(*aligner[0]))\n",
-    "        \"\"\"for sr1, sr2 in product(seq,nea_1):\n",
-    "            for a in pairwise2.align.localms(str(seq[sr1].seq), str(nea_1[sr2].seq), 2, -1, -.5, -.1):\n",
-    "                result.write(format_alignment(*a))\"\"\"\n",
-    "\n",
-    "        \"\"\"for i in a:\n",
-    "            print(i)\"\"\"\n",
-    "    \"\"\"for seq in d_loop:\n",
-    "        sequences.append(seq.seq)\n",
-    "    sequences.append(nea_1)\n",
-    "    sequences.append(nea_2)\"\"\"\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "modern human\n",
-      "GGATAGACTCCCCCCAGTAGGTACCCCTGCTCT-TCCC-TA-A--ACTGACA-TTAC-ACGATACAT-GC-CATTTCCGTAAT-ACATGA-TACATGACAATTCCCACCCATCCAAACAACCATAGGATCACCCACTCCCCACCGAAACCTTA-ACGTAACTACACACTATCAACTCCCAACTAACG-ACATGAACGAACATTCGTACCCCTCCCCCAAAACTAC-ACC-TAACC-CAAAA-TACATGATGTCCACCAGTTCATAA-ATACCATGGCATGTTATAAGTACCACCG-ACCGT-CATT-ACATGCTTTATGTATCGCAACAACTACCCAC-TCAGTTATGAACCCACCATGGGTTTA-GACGAAGGGGTACTTTCTTGTCTCTTATCAAATTTA-AT-CTAGAATCGAA--ACCC-A---CG-ATTACCAC-CTCA-ATTTCTGAAAAAGAG-ACTAAACAG-GAACCTTTTTCCAAAAGTAGAGGCCAATGTTCTGACCACA-TAA-TCAAATA-TGATGTTCCTGTCCGGGTAAACTCATAAA-ACAAAA-GT-TAATCC-CT-CTATCAACCATATCCTAATCCTAACAACA\n",
-      "nea_1\n",
-      "GTATTGACT-CACCCATCAGCAACCGCT-ATGTATCTCGTACATTACTGTTAGTTACCATGA-ATATTGTACAGTACCATAATTACTTGACTACCTG-CAGTACATA-AAAACC-TA-ATCCACATCA-AACCC-C-CCCC-CC-CATGCTTACAAGCAAGCACA-GCAATCAACCTTCAACTGTCATACATCAACTACAACTCCAAAGACGCCCTTACACCCACTAGGATATCAACAAACCTACCCACCCTTGA-CAGTACATAGCACATAAAGTCAT-TTA-CCGTA-CATAGCACATTACAGTCAAATCCCTTCTCGCCCCCATGGATGACCCCCCTCAGATA-GGGGTC-CCTTGATTTTTCGTCTGGGGGGT--GTGCACG-C-GATAGCATTGCGAGACGCTGGAGCCGGAGCACCCTATGTCGCAGTATCTGTCTTTGATTCCTGCCCCATTCCATTATTTATCGCACCTACGTTCAATATTACAGGCGAGCATACTTACTAAAGTGTGTTAATTAATTA-ATGCTTGT-AGGACATAATAATAACGACTAAATGTCTGCACAGCTGCTTTCCA-CACAGAC--ATCATAACAAAA\n",
-      "288.0\n",
-      "177\n",
-      "780\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-7b8472727fb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequences\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0malignment\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpairwise2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malign\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlocalms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequences\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnea_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mtmp_sequence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malignment\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mtrimmed_sequence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtmp_sequence\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0malignment\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0malignment\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/Bio/pairwise2.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **keywds)\u001b[0m\n\u001b[1;32m    406\u001b[0m             \u001b[0;34m\"\"\"Call the alignment instance already created.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    407\u001b[0m             \u001b[0mkeywds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkeywds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 408\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0m_align\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkeywds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    409\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    410\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/Bio/pairwise2.py\u001b[0m in \u001b[0;36m_align\u001b[0;34m(sequenceA, sequenceB, match_fn, gap_A_fn, gap_B_fn, penalize_extend_when_opening, penalize_end_gaps, align_globally, gap_char, force_generic, score_only, one_alignment_only)\u001b[0m\n\u001b[1;32m    472\u001b[0m     \u001b[0;31m# Look for the proper starting point. Get a list of all possible\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    473\u001b[0m     \u001b[0;31m# starting points.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 474\u001b[0;31m     \u001b[0mstarts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_find_start\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore_matrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malign_globally\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    475\u001b[0m     \u001b[0;31m# Find the highest score.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    476\u001b[0m     \u001b[0mbest_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0m_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstarts\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/Bio/pairwise2.py\u001b[0m in \u001b[0;36m_find_start\u001b[0;34m(score_matrix, align_globally)\u001b[0m\n\u001b[1;32m    889\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mncols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    890\u001b[0m                 \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscore_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 891\u001b[0;31m                 \u001b[0mstarts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    892\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mstarts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    893\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "sequences = []\n",
+    "trimmed_sequences = []\n",
+    "scores = []\n",
     "with open(\"d_loop.fasta\", \"r\") as handle:\n",
     "    d_loop = list(SeqIO.parse(handle, \"fasta\"))\n",
     "    for a in d_loop:\n",
     "        sequences.append(a)\n",
-    "\"\"\"for b in sequences:\n",
-    "    alignment = pairwise2.align.localms(nea_1, b, 5, -4, -8, -8)\n",
-    "    print(format_alignment(*aligner[0]))\"\"\"\n",
-    "alignment = pairwise2.align.localms(sequences[0].seq, nea_1, 5, -4, -8, -8)\n",
-    "\"print(format_alignment(*alignment[0]))\"\n",
-    "print(\"modern human\")\n",
-    "print(alignment[0][0][177:780])\n",
-    "print(\"nea_1\")\n",
-    "print(alignment[0][1][177:780])\n",
-    "print(alignment[0][2])\n",
-    "print(alignment[0][3])\n",
-    "print(alignment[0][4])\n",
-    "    "
+    "\n",
+    "for i in range(len(sequences)):  \n",
+    "    alignment = pairwise2.align.localms(sequences[i].seq, nea_1, 5, -4, -8, -8)\n",
+    "    tmp_sequence = alignment[i][0]\n",
+    "    trimmed_sequence = tmp_sequence[alignment[i][3]:alignment[i][4]]\n",
+    "    trimmed_sequences.append(trimmed_sequence)\n",
+    "    scores.append(alignment[i][3])\n"
    ]
   },
   {
