--- a/humans_demo/genetic_distances/scatter_dist.ipynb
+++ b/humans_demo/genetic_distances/scatter_dist.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,8 @@
     "X, _ = cmdscale(mat)\n",
     "plt.figure(figsize=(8, 6), dpi=320)\n",
     "plt.plot(X, 'o')\n",
-    "plt.savefig(\"scatter.png\")\n"
+    "plt.savefig(\"scatter.png\")\n",
+    "plt.savefig(\"scatter.jpg\")\n"
    ]
   },
   {
